Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38809

RBR fails upon DML with XML type

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 12.3
    • 12.3.2
    • Data types
    • None
    • Can result in unexpected behaviour
    • Q2/2026 Server Development

    Description

      --source include/have_binlog_format_row.inc
      --source include/master-slave.inc
       
      CREATE TABLE t (a xmltype);
      INSERT INTO t VALUES ('<a></a>');
       
      --sync_slave_with_master
       
      --connection master
      DROP TABLE t;
       
      --source include/rpl_end.inc
      

      main 21a0714a118614982d20bfa504763d7247800091

      Last_Errno	1677
      Last_Error	Column 0 of table 'test.t' cannot be converted from type 'longblob' to type 'xmltype'
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              elenst Elena Stepanova
              Alexey Botchkov Alexey Botchkov
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 5d
                  5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 0.5h Time Not Required
                  3d 0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.