plugin/type_xmltype/sql_type_xmltype.cc
@@ -184,6 +184,29 @@ int Field_xmltype::report_wrong_value(const ErrConv &val)
 }
 
 
+enum_conv_type
+Field_xmltype::rpl_conv_type_from(const Conv_source &source,
+                                  const Relay_log_info *rli,
+                                  const Conv_param &param) const
+{
+  const Type_handler *th= source.type_handler();
+  if (th == &type_handler_tiny_blob ||
+      th == &type_handler_medium_blob ||
+      th == &type_handler_long_blob ||
+      th == &type_handler_blob ||
+      th == &type_handler_blob_compressed ||
+      th == &type_handler_string ||
+      th == &type_handler_var_string ||
+      th == &type_handler_varchar ||
+      th == &type_handler_varchar_compressed)
+  {
+    return CONV_TYPE_PRECISE;
+  }
+
+  return CONV_TYPE_IMPOSSIBLE;
+}
+
+
 class Item_xmltype_typecast_func_handler: public Item_handled_func::Handler_str
 {
 public:
